se actualizo documentacion de 2fa y se cambio logica de seleccion de metodo primario
